--- a/package.json
+++ b/package.json
@@ -1,14 +1,77 @@
 {
   "name": "jumpstart",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "build": "tsc"
+    "app:build": "next build",
+    "app:start": "next start",
+    "app:start:dev": "next dev",
+    "format": "prettier . --write",
+    "lint:fix": "next lint --fix",
+    "mock:server:start": "ts-node-dev --respawn --ignore-watch .next -r tsconfig-paths/register --project tsconfig.server.json src/api/mocks/server.ts",
+    "storybook:build": "storybook build",
+    "storybook:deploy": "gh-pages -d storybook-static",
+    "storybook:start": "storybook dev -p 6006",
+    "typescript": "tsc -p tsconfig.json --noEmit"
   },
-  "dependencies": {},
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  },
+  "dependencies": {
+    "@emotion/cache": "^11.13.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
+    "@mui/material-nextjs": "^6.1.6",
+    "@mui/x-data-grid": "^7.27.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@svgr/webpack": "^8.1.0",
+    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^5.59.20",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
+    "axios": "^1.8.2",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
+    "next": "^15.1.4",
+    "react": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-hook-form": "^7.53.2",
+    "react-redux": "^9.1.2",
+    "ts-jest": "^29.2.5",
+    "zod": "^3.23.8"
+  },
   "devDependencies": {
-    "typescript": "^5.5.3"
-  },
-  "private": true
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.2",
+    "eslint-plugin-storybook": "^0.11.0",
+    "express": "^4.21.2",
+    "husky": "^9.1.7",
+    "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.7.0",
+    "prettier": "3.3.3",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5",
+    "uuid": "^11.0.5"
+  }
 }
