--- a/package.json
+++ b/package.json
@@ -20,58 +20,58 @@
 		]
 	},
 	"dependencies": {
-		"@emotion/cache": "^11.13.1",
-		"@emotion/react": "^11.13.3",
-		"@emotion/styled": "^11.13.0",
-		"@fontsource/roboto": "^5.1.0",
-		"@hookform/resolvers": "^3.9.1",
-		"@mui/icons-material": "^6.1.6",
-		"@mui/material": "^6.1.6",
-		"@mui/material-nextjs": "^6.1.6",
-		"@mui/x-data-grid": "^7.27.0",
-		"@reduxjs/toolkit": "^2.3.0",
+		"@emotion/cache": "^11.14.0",
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@fontsource/roboto": "^5.2.5",
+		"@hookform/resolvers": "^4.1.3",
+		"@mui/icons-material": "^6.4.8",
+		"@mui/material": "^6.4.8",
+		"@mui/material-nextjs": "^6.4.3",
+		"@mui/x-data-grid": "^7.28.1",
+		"@reduxjs/toolkit": "^2.6.1",
 		"@svgr/webpack": "^8.1.0",
-		"@tanstack/react-query": "^5.59.20",
-		"@tanstack/react-query-devtools": "^5.59.20",
+		"@tanstack/react-query": "^5.69.0",
+		"@tanstack/react-query-devtools": "^5.69.0",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
 		"@testing-library/react-hooks": "^8.0.1",
 		"@testing-library/user-event": "^14.6.1",
 		"@types/jest": "^29.5.14",
-		"axios": "^1.8.2",
+		"axios": "^1.8.4",
 		"babel-jest": "^29.7.0",
 		"jest": "^29.7.0",
 		"jwt-decode": "^4.0.0",
 		"lodash": "^4.17.21",
-		"next": "^15.1.4",
-		"react": "19.0.0-rc-02c0e824-20241028",
-		"react-dom": "19.0.0-rc-02c0e824-20241028",
-		"react-hook-form": "^7.53.2",
-		"react-redux": "^9.1.2",
-		"ts-jest": "^29.2.5",
-		"zod": "^3.23.8"
+		"next": "^15.2.4",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
+		"react-hook-form": "^7.54.2",
+		"react-redux": "^9.2.0",
+		"ts-jest": "^29.3.0",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
-		"@types/express": "^5.0.0",
+		"@types/express": "^5.0.1",
 		"@types/lodash": "^4.17.16",
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
+		"@types/node": "^22.13.13",
+		"@types/react": "^19.0.12",
+		"@types/react-dom": "^19.0.4",
 		"cors": "^2.8.5",
 		"dayjs": "^1.11.13",
-		"eslint": "^8",
-		"eslint-config-next": "15.0.2",
-		"eslint-plugin-storybook": "^0.11.0",
+		"eslint": "^9.23.0",
+		"eslint-config-next": "15.2.4",
+		"eslint-plugin-storybook": "^0.12.0",
 		"express": "^4.21.2",
 		"husky": "^9.1.7",
 		"jest-environment-jsdom": "^29.7.0",
-		"msw": "^2.7.0",
-		"prettier": "3.3.3",
+		"msw": "^2.7.3",
+		"prettier": "3.5.3",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5",
-		"uuid": "^11.0.5"
+		"typescript": "^5.8.2",
+		"uuid": "^11.1.0"
 	}
 }
